src/externals/lgpl/neodatis/dot-net/src/test/bad/Neodatis/Odb/Test/Btree/Odb/TestLazyNode.cs
namespace NeoDatis.Odb.Test.Btree.Odb
{
	public class TestLazyNode : NeoDatis.Odb.Test.ODBTest
	{
		public virtual void TestEmpty()
		{
		}
		// to avoid junit junit.framework.AssertionFailedError: No tests found
		// in ...
	}
}
